Dashboard user ekhem

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1278,7 +1278,7 @@ section {
 # Team
 --------------------------------------------------------------*/
 .team {
-  background: #fff;
+  background: #ef6603;
   padding: 60px 0;
 }
 
